--- a/.gitignore
+++ b/.gitignore
@@ -36,6 +36,11 @@ out/
 ### VS Code ###
 .vscode/
 
+### Environment Variables ###
+.env
+.env.local
+.env.*.local
+
 .DS_Store
 ._.DS_Store
 **/.DS_Store
