[FEAT] JWT 기반 인증 기능 (회원가입 / 로그인 / 토큰 재발급)

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,11 @@ spring:
       hibernate:
         format_sql: true
 
+gifpt:
+  jwt:
+    secret: "dev_dev_dev_dev_dev_dev_dev_dev_32bytes_min"
+    expires-in-ms: 3600000  #1시간
+
 server:
   port: 8080
 
